<resources>
    <string name="app_name">Sample-Login</string>

    <string name="id_hint">아이디를 적어주세요</string>
    <string name="password_hint">비밀번호를 적어주세요</string>
    <string name="auto_login">자동로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="forget">아이디/비밀번호를 잊었다면 눌러주세요.</string>
    <string name="next">다음</string>

    <string name="TermsOfUse">Sample-Login 이용약관</string>
    <string name="PersonalInformation">개인정보 수집 및 이용</string>
    <string name="LocationInformation">위치정보 이용약관</string>

    <string name="Agree">동의</string>
    <string name="Disagreement">비동의</string>

    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="DateOfBirth">생년월일</string>
    <string name="year">년(4자)</string>
    <string name="month">월</string>
    <string name="date">일</string>
</resources>