<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.loginsample.myapplication.LoginPage" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginPage">

        <TextView
            android:id="@+id/AppLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="330sp"
            android:text="@string/app_name"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Edit_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:gravity="center_vertical"
            android:hint="@string/id_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/AppLogo"
            app:layout_constraintWidth_percent="0.6" />

        <EditText
            android:id="@+id/Edit_PassWord"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_vertical"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Edit_ID"
            app:layout_constraintWidth_percent="0.6" />

        <CheckBox
            android:id="@+id/AutoLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/auto_login"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@id/Edit_PassWord"
            app:layout_constraintRight_toLeftOf="@id/ButtonLogin"
            app:layout_constraintTop_toBottomOf="@id/Edit_PassWord"
            app:layout_constraintWidth_percent="0.3" />

        <Button
            android:id="@+id/ButtonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@drawable/button_round"
            android:layout_marginTop="10sp"
            app:layout_constraintLeft_toRightOf="@id/AutoLogin"
            app:layout_constraintTop_toBottomOf="@id/Edit_PassWord"
            app:layout_constraintWidth_percent="0.3" />


        <TextView
            android:id="@+id/SignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ButtonLogin"
            android:onClick="@{activity::moveSignUpPage}"/>

        <TextView
            android:id="@+id/Forget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/forget"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SignUp"
            app:layout_constraintWidth_percent="0.6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>