<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signup"
            type="com.loginsample.myapplication.signup.SignUp" />
    </data>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ParentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextID"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/id"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.7" />

            <Space
                android:id="@+id/IDSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/TextID"/>

            <EditText
                android:id="@+id/Edit_ID"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:background="@drawable/edit_divide"
                android:paddingStart="10dp"
                app:layout_constraintLeft_toLeftOf="@id/TextID"
                app:layout_constraintRight_toRightOf="@id/TextID"
                app:layout_constraintTop_toBottomOf="@id/IDSpace"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,RtlSymmetry"/>

            <Space
                android:id="@+id/IDPasswordSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/Edit_ID"/>

            <TextView
                android:id="@+id/TextPassword"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/password"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/IDPasswordSpace"
                app:layout_constraintWidth_percent="0.7" />

            <Space
                android:id="@+id/PasswordSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/TextPassword"/>

            <EditText
                android:id="@+id/Edit_PassWord"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:background="@drawable/edit_divide"
                android:paddingStart="10dp"
                app:layout_constraintLeft_toLeftOf="@id/TextID"
                app:layout_constraintRight_toRightOf="@id/TextID"
                app:layout_constraintTop_toBottomOf="@id/PasswordSpace"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,RtlSymmetry"/>

            <Space
                android:id="@+id/PasswordPasswordCheckSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/Edit_PassWord"/>

            <TextView
                android:id="@+id/TextPasswordCheck"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/passwordCheck"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PasswordPasswordCheckSpace"
                app:layout_constraintWidth_percent="0.7" />

            <Space
                android:id="@+id/PasswordCheckSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/TextPasswordCheck"/>

            <EditText
                android:id="@+id/Edit_PassWordCheck"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:background="@drawable/edit_divide"
                android:paddingStart="10dp"
                app:layout_constraintLeft_toLeftOf="@id/TextID"
                app:layout_constraintRight_toRightOf="@id/TextID"
                app:layout_constraintTop_toBottomOf="@id/PasswordCheckSpace"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,RtlSymmetry"/>

            <Space
                android:id="@+id/PasswordCheckNameSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/Edit_PassWordCheck"/>

            <TextView
                android:id="@+id/TextName"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/name"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/PasswordCheckNameSpace"
                app:layout_constraintWidth_percent="0.7" />

            <Space
                android:id="@+id/NameSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/TextName"/>

            <EditText
                android:id="@+id/Edit_Name"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:gravity="center_vertical"
                android:background="@drawable/edit_divide"
                android:paddingStart="10dp"
                app:layout_constraintLeft_toLeftOf="@id/TextID"
                app:layout_constraintRight_toRightOf="@id/TextID"
                app:layout_constraintTop_toBottomOf="@id/NameSpace"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,RtlSymmetry" />

            <Space
                android:id="@+id/NameDateOfBirthSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/Edit_Name"/>

            <TextView
                android:id="@+id/TextDateOfBirth"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:text="@string/DateOfBirth"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/NameDateOfBirthSpace"
                app:layout_constraintWidth_percent="0.7" />

            <Space
                android:id="@+id/DateOfBirthSpace"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                app:layout_constraintTop_toBottomOf="@id/TextDateOfBirth"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="35dp"
                app:layout_constraintTop_toBottomOf="@id/DateOfBirthSpace"
                app:layout_constraintLeft_toLeftOf="@id/TextDateOfBirth"
                app:layout_constraintRight_toRightOf="@id/TextDateOfBirth">

                <EditText
                    android:id="@+id/Year"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_divide"
                    android:hint="@string/year"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textSize="12sp"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintLeft_toLeftOf="parent"
                    tools:ignore="RtlSymmetry"
                    android:importantForAutofill="no" />
                
                <Space
                    android:id="@+id/YearSpace"
                    app:layout_constraintWidth_percent="0.05"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintLeft_toRightOf="@id/Year"/>
                
                <Spinner
                    android:id="@+id/Month"
                    android:layout_width="0dp"
                    android:entries="@array/month"
                    app:layout_constraintWidth_percent="0.3"
                    android:layout_height="match_parent"
                    android:prompt="@string/month"
                    app:layout_constraintLeft_toRightOf="@id/YearSpace"/>

                <Space
                    android:id="@+id/MonthSpace"
                    app:layout_constraintWidth_percent="0.05"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintLeft_toRightOf="@id/Month"/>

                <EditText
                    android:id="@+id/Date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:hint="@string/date"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:textSize="12sp"
                    android:background="@drawable/edit_divide"
                    app:layout_constraintWidth_percent="0.3"
                    app:layout_constraintLeft_toRightOf="@id/MonthSpace"
                    tools:ignore="RtlSymmetry,TextFields"
                    android:importantForAutofill="no" />

            </androidx.constraintlayout.widget.ConstraintLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>